nginx-deploy-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-blue
  template:
    metadata:
      labels:
        app: nginx-blue
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        ports:
        - containerPort: 80
