nginx-deploy-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-green
  template:
    metadata:
      labels:
        app: nginx-green
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        ports:
        - containerPort: 80
