nginx-service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-blue
spec:
  ports:
  - port: 80
    targetPort: 80
    nodePort: 32060
  type: NodePort
  selector:
    app: nginx-blue
