nginx-service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-green
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-green
