blue-green-deploy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: bgnginx.com
    http:
      paths:
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: nginx-service-blue
            port:
              number: 80
      - path: /green
        pathType: Prefix
        backend:
          service:
            name: nginx-service-green
            port:
              number: 80
